# Study_OpenGL

./: .gitignore  CMakeLists.txt
examples/: CreateEmptyWindow.cpp  DrawRectangleUsingShaders.cpp  DrawTriangleUsingShaders.cpp
res/shaders/: Basic.glsl
src/: Main.cpp
